education/educationapp/force-app/main/default/objects/edu_instituicaodeensino__c/edu_instituicaodeensino__c.object-meta.xml
<CustomObject>
    <description>Instituição de ensino que o aluno ou o curso está cadastrado.</description>
    <label>Instituição de Ensino</label>
    <nameField>
        <label>Nome da Instituição de Ensino</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Instituições de Ensino</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>