education/educationapp/force-app/main/default/objects/edu_instituicaodeensino__c/fields/edu_alunoinst__c.field-meta.xml
<CustomField>
    <fullName>edu_alunoinst__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Aluno matriculado nesta instituição de ensino.</inlineHelpText>
    <label>Aluno Matriculado</label>
    <referenceTo>edu_aluno__c</referenceTo>
    <relationshipLabel>Alunos Matriculados</relationshipLabel>
    <relationshipName>edu_alunoinst</relationshipName>
    <type>Lookup</type>
</CustomField>