education/educationapp/force-app/main/default/objects/edu_instituicaodeensino__c/fields/edu_cnpj__c.field-meta.xml
<CustomField>
    <fullName>edu_cnpj__c</fullName>
    <inlineHelpText>CNPJ que consta no contrato de prestação de serviços da instituição de ensino.</inlineHelpText>
    <label>CNPJ</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>