education/educationapp/force-app/main/default/objects/edu_instituicaodeensino__c/fields/edu_email__c.field-meta.xml
<CustomField>
    <fullName>edu_email__c</fullName>
    <inlineHelpText>E-mail de contato da instituição de ensino.</inlineHelpText>
    <label>E-mail</label>
    <type>Email</type>
</CustomField>