education/educationapp/force-app/main/default/objects/edu_instituicaodeensino__c/fields/edu_endereco__c.field-meta.xml
<CustomField>
    <fullName>edu_endereco__c</fullName>
    <inlineHelpText>Endereço da instituição de ensino ou do polo no qual o aluno está matriculado.</inlineHelpText>
    <label>Endereço</label>
    <type>TextArea</type>
</CustomField>