education/educationapp/force-app/main/default/objects/edu_instituicaodeensino__c/fields/edu_qtdealunos__c.field-meta.xml
<CustomField>
    <fullName>edu_qtdealunos__c</fullName>
    <inlineHelpText>Quantidade de alunos matriculados nesta instituição de ensino.</inlineHelpText>
    <label>Quantidade de Alunos</label>
    <summaryForeignKey>edu_aluno__c.edu_instmatalu__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>