education/educationapp/force-app/main/default/objects/edu_instituicaodeensino__c/fields/edu_site__c.field-meta.xml
<CustomField>
    <fullName>edu_site__c</fullName>
    <inlineHelpText>Site da instituição do ensino.</inlineHelpText>
    <label>Site</label>
    <type>Url</type>
</CustomField>