education/educationapp/force-app/main/default/objects/edu_instituicaodeensino__c/fields/edu_telefone__c.field-meta.xml
<CustomField>
    <fullName>edu_telefone__c</fullName>
    <inlineHelpText>Telefone de contato da instituição de ensino.</inlineHelpText>
    <label>Telefone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>